Fixed styling issue causing horizontal scroll on mobiles.

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
     scroll-behavior: smooth;
+
 }
 
 body {
@@ -89,9 +90,10 @@ code {
     display: inline-block;
     background-color: #303030;
     padding: 10px 20px;
-    margin: 0 10px 10px 0;
+    margin: 0 10px 0 0;
+    max-width: 250px;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: calc(12px + 0.5vw);
     color: lightgreen;
 }
 
